--- a/webui/src/styles/message.sass
+++ b/webui/src/styles/message.sass
@@ -1,23 +1,28 @@
 .message
   display: block
-  font-size: 14px
-  margin: 20px 0 30px 0
+  font-size: 0.8rem
+  margin: 1rem 0 1.5rem 0
+  padding-bottom: 0.3rem
   border: 1px solid $border
   background: $white
-  border-radius: 4px
+  border-radius: $traefik-border-radius
   box-shadow: 1px 2px 5px rgba($border, 0.4)
 
   .message-header
     color: $color-secondary
     border-bottom: 1px solid $border-secondary
-    padding: 10px 10px
-    background: #f8f9fa
-    border-top-left-radius: 4px
-    border-top-right-radius: 4px
+    padding: 0.6rem
+    border-top-left-radius: $traefik-border-radius
+    border-top-right-radius: $traefik-border-radius
+
+    .icon
+      display: block
+      float: left
+      width: 1.4rem
+      height: 1.4rem
+      margin-right: 0.5rem
 
     h2
-      font-size: 14px
-      weight: $weight-bold
       display: flex
       justify-content: space-between
 
@@ -29,18 +34,33 @@
     .tabs
       margin-bottom: 0.5rem
 
-    .field
-      margin: 5px 10px
-      padding-bottom: 10px
+    .section-container
+      padding: 0.3em 0 0 0
+
+    .section-line
+      padding: 0 0.75em
+
+    .section-line-header
+      padding: 0.2em 0 0 0
+
+    // required for small screen (without -> table overlapping)
+    .table-fixed
+      table-layout: fixed
+
+    // required for small screen (without -> table overlapping)
+    .table-fixed-break
+      table-layout: fixed
+      word-wrap: break-word
+
+    .table-cell-limited
+      overflow: hidden
+      text-overflow: ellipsis
+
+    .table-col-75
+      width: 75%
 
     h2
-      margin: 10px 10px 0 10px
       color: $black
 
     hr
       margin: 5px 0
-
-  .message-subheader
-    border-bottom: 1px solid $border-secondary
-    padding: 10px
-    margin-bottom: 5px
